# ytChatbot

./: .gitignore  README.md  SPRINT_BACKLOG.md  getTranscript.py  main.py  pyproject.toml  test_segmentation.py  test_segmentation_functional.py  videos.db
agent/: __init__.py  video_segmenter.py
agent/chatbot/: conversational.py  db_helpers.py
agent/video_segmenter/: __init__.py  are_topics_similar.py  create_segmentation_chain.py  create_streaming_segmentation_chain.py  format_timestamp.py  format_transcript_snippets.py  merge_similar_segments.py  prepare_segmentation_input.py  segment_long_video.py  segment_video.py
endpoints/: __init__.py  chatbot.py  segmentation.py  transcript.py
helpers/: __init__.py  db_utils.py  extract_video_id.py  format_duration.py  format_timestamp.py  getTranscript.py
models/: __init__.py  database.py  pydantic_models.py
src/: config.py
tests/: test_coverage_detection.py  test_database.py  test_partial_segmentation.py  test_segmentation.py
